[FEAT]: added visits&visitors endpoints for REST API
