# routes/api.php
@@ -1,10 +1,12 @@
 <?php
 
+use App\Http\Controllers\api\VisitorController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\ResidenceController;
 use App\Http\Controllers\Api\ResidentController;
 use App\Http\Controllers\Api\AuthController;
+use App\Http\Controllers\Api\VisitController;
 
 Route::get('/user', function (Request $request) {
     return $request->user();
@@ -14,8 +16,8 @@ Route::get('/user', function (Request $request) {
 Route::prefix('auth')->group(function () {
     Route::post('register', [AuthController::class, 'register']);
     Route::post('login', [AuthController::class, 'login']);
-    Route::post('refresh-token', [AuthController::class, 'refreshToken']);
-    Route::middleware('auth:sanctum')->group(function () {
+    Route::middleware('auth:api')->group(function () {
+        Route::post('refresh-token', [AuthController::class, 'refreshToken']);
         Route::post('logout', [AuthController::class, 'logout']);
         Route::get('me', [AuthController::class, 'me']);
     });
@@ -43,6 +45,8 @@ Route::middleware('auth:api')->group(function () {
     // Route::put('/residents/{id}', [ResidentController::class, 'update']);
     // Route::delete('/residents/{id}', [ResidentController::class, 'destroy']);
     Route::apiResource('residents', ResidentController::class);
+    Route::apiResource('visits', VisitController::class);
+    Route::apiResource('visitors', VisitorController::class);
 
 
 
